[gd_scene load_steps=5 format=3 uid="uid://cj6sory8bd4kq"]

[ext_resource type="Script" uid="uid://eesnkqjypo1o" path="res://Scripts/UI/interactive_tut.gd" id="1_infdj"]
[ext_resource type="Texture2D" uid="uid://bga34gcbleyo8" path="res://Sprites/betterTutScroll-removebg-preview.png" id="2_pot3i"]
[ext_resource type="FontFile" uid="uid://dm2e0fgq0n617" path="res://Jersey15-Regular.ttf" id="3_7tcg7"]
[ext_resource type="Texture2D" uid="uid://bpsdir23dnr2r" path="res://Sprites/spiky_plant-removebg-preview.png" id="4_pot3i"]

[node name="interactive_tut" type="Control" node_paths=PackedStringArray("main")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_infdj")
main = NodePath("main")

[node name="background" type="ColorRect" parent="."]
offset_right = 1157.0
offset_bottom = 647.0
color = Color(0.882353, 0.52549, 0.298039, 1)

[node name="scroll" type="Sprite2D" parent="."]
position = Vector2(572, 324)
scale = Vector2(3.21778, 2.10667)
texture = ExtResource("2_pot3i")

[node name="scrollBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 292.0
offset_top = 142.0
offset_right = 863.0
offset_bottom = 508.0
color = Color(0.427451, 0.560784, 0.768627, 1)

[node name="main" type="Label" parent="."]
layout_mode = 0
offset_left = 294.0
offset_top = 143.0
offset_right = 855.0
offset_bottom = 508.0
theme_override_fonts/font = ExtResource("3_7tcg7")
theme_override_font_sizes/font_size = 40
text = "Avoid stepping into the field of vision of enemies as they will start to attack 
		Moving across          - causes damage and makes you move slower"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="spikyPlant" type="Sprite2D" parent="."]
position = Vector2(618, 371)
scale = Vector2(0.401405, 0.374909)
texture = ExtResource("4_pot3i")

[node name="continue" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 428.0
offset_top = 531.0
offset_right = 717.0
offset_bottom = 615.0
theme_override_fonts/font = ExtResource("3_7tcg7")
theme_override_font_sizes/font_size = 50
text = "Continue"

[node name="cur_status" type="Label" parent="."]
layout_mode = 0
offset_left = 1066.0
offset_top = 4.0
offset_right = 1143.0
offset_bottom = 80.0
theme_override_fonts/font = ExtResource("3_7tcg7")
theme_override_font_sizes/font_size = 75
text = "1/6"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="continue" to="." method="_on_continue_pressed"]
